Added the MainScreen. Color and font improvements required.

--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "",
+    "githubUrl": "https://github.com/Candy-Tewari/KrishiUber.git"
   }
 }
