--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "apisauce": "^2.0.1",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
@@ -20,11 +22,15 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-otp-verify": "^1.0.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
-    "react-native-web": "~0.13.12",
-    "react-navigation-drawer": "^2.7.0"
+    "react-native-sms-retriever": "^1.1.1",
+    "react-native-web": "^0.15.1",
+    "react-navigation-drawer": "^2.7.0",
+    "expo-secure-store": "~9.3.0",
+    "expo-location": "~10.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
