--- a/package.json
+++ b/package.json
@@ -14,26 +14,33 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "apisauce": "^2.0.1",
+    "crypto": "^1.0.1",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-otp-verify": "^1.0.3",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "^0.15.1",
     "react-navigation-drawer": "^2.7.0",
-    "expo-secure-store": "~9.3.0",
-    "expo-location": "~10.0.0"
+    "uuid": "^8.3.2",
+    "expo-random": "~10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "private": true
 }
