--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
+    "expo-random": "~10.0.0",
     "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "~2.6.1",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -35,8 +37,8 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-web": "^0.15.1",
     "react-navigation-drawer": "^2.7.0",
-    "uuid": "^8.3.2",
-    "expo-random": "~10.0.0"
+    "socket.io-client": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
