--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
+    "expo-linking": "~2.0.1",
     "expo-location": "~10.0.0",
+    "expo-notifications": "^0.11.6",
     "expo-random": "~10.0.0",
     "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
@@ -29,6 +31,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-maps": "^0.28.0",
     "react-native-otp-verify": "^1.0.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
