--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "KrishiUber",
-    "slug": "KrishiUber",
+    "name": "Krishi",
+    "slug": "krishi",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./app/assets/icon.png",
